[tool.poetry]
name = "Megaladon"
version = "0.0.2"
description = "Megaladon - Pytorch"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"
readme = "README.md"  # assuming you have a README.md file
homepage = "https://github.com/Agora-X/Megaladon"
keywords = ["artificial intelligence", "attention mechanism", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]

include = ["Megaladon/**/*"]

[tool.poetry.dependencies]
python = "^3.6"
transformers = "*"
datasets = "*"
deepspeed = "*"
openai = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
